# tradeinsights

./: README.md  main.py  pyproject.toml
tests/: test_project.py
