[tool.poetry]
name = "tradeinsights"
version = "0.1.0"
description = ""
authors = ["Vitaly D. <netmin@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"
pandas = "^2.0.3"
mplfinance = "^0.12.10b0"
matplotlib = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
